Fixing contrast errors in gallery

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,17 +1,20 @@
 body {
     margin: 0;
     font-family: 'Roboto', 'Lato', sans-serif;
-    background-color: rgba(165, 229, 238, 0.432);;
+    background-color: rgba(165, 229, 238, 0.432);
+    color: black;
 }
 
 #logo {
-    font-size: 60px;
+    float: left;
+    font-size: 40px;
 }
+
 
 #menu {
     font-size: 30px;
-    margin: 0;
-    padding: 0;
+    margin: 2px;
+    padding: 2px;
     border: none;
     font-family: 'Lato', sans-serif;
     letter-spacing: 4px;
@@ -23,13 +26,20 @@ body {
     border: none;
     float: right;
     list-style-type: none;
+
+}
+
+footer > p {
+    color: black;
 }
 
 a {
+    text-decoration: none;
     color: white;
 }
 
 a:visited {
+    color: white;
     text-decoration: none;
     text-transform: lowercase;
     font-weight: 900;
@@ -41,6 +51,7 @@ footer {
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
+    margin: 0;
 }
 
 #photos {
@@ -67,7 +78,7 @@ img {
     padding: 0;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and(max-width: 500px) {
     .column {
         flex: 50%;
         width: 100%;
@@ -81,7 +92,7 @@ img {
     }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and(max-width: 1200px) {
     body {
         width: 100%;
     }
